<resources>
    <string name="app_name">Water Tracker</string>
    <string name="App_Title">Water Tracker</string>
    <string name="counter_text">You drank %1$d cups of water today!</string>
    <string name="counter_text_left_until_goal">%1$d cups left to reach your goal.\n You can do this!</string>
    <string name="goal_reached">Good job!</string>
    <string name="add_amount">Add amount</string>
    <string name="save">SAVE</string>
    <string name="streak">%1$d days streak!</string>
</resources>